FIXED TABLE HEADER JINETES, SCROLLBAR Y FORMULARIO DATOS

--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -1,29 +1,36 @@
-body, html {
-    margin: 0;
-    height:100%;
-  }
-  body{
-    overflow: hidden;
-  }
-  .container-fluid, .parent{
-    height: 100%;
-  }
-  #tab-contenedor {
-    position: relative;
-    height:100%;
-    /* overflow-y: auto;  */
-  }
-  /* #tab-pane-jinetes {
-    height: 100%;
-    max-height: 100%;
-    overflow:auto;
-  } */
-  #tab-jinetes {
-    height: 80%;
-    max-height: 80%;
-    overflow: auto;
-  }
+table {
+  width: 100%;
+}
 
-  #formulariodatosjinete {
-    text-align: center;
-  }
+thead, tbody, tr, td, th { display: block; }
+tr:after {
+  content: ' ';
+  display: block;
+  visibility: hidden;
+  clear: both;
+} 
+
+thead th {
+  height: 30px;
+
+  /*text-align: left;*/
+}
+
+tbody {
+  height: 34.34rem;
+  overflow-y: auto;
+}
+
+thead {
+  /* fallback */
+}
+
+
+tbody td, thead th {
+  width: 19.2%;
+  float: left;
+}
+
+#tab-competiciones, #tab-caballos, #tab-otros {
+  display:none;
+}
